unpackaged/main/default/objects/LyncUserStatusMaster__c/LyncUserStatusMaster__c.object-meta.xml
<CustomObject>
    <label>Lync User Status Info</label>
    <nameField>
        <label>LyncUserName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lync User Status Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>