unpackaged/main/default/objects/LyncUserStatusMaster__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATEVALUE( StatusChangedOn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChangedOn</label>
    <type>Date</type>
</CustomField>