unpackaged/main/default/objects/LyncUserStatusMaster__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Do Not Disturb</fullName>
            </value>
            <value>
                <fullName>Be Right Back</fullName>
            </value>
            <value>
                <fullName>Off Work</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
            <value>
                <fullName>In a call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>