unpackaged/main/default/objects/LyncUserStatusMaster__c/fields/StatusChangedAt__c.field-meta.xml
<CustomField>
    <fullName>StatusChangedAt__c</fullName>
    <label>ChangedAt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>