unpackaged/main/default/objects/LyncUserStatusMaster__c/fields/StatusChangedOn__c.field-meta.xml
<CustomField>
    <fullName>StatusChangedOn__c</fullName>
    <label>StatusChangedOn</label>
    <type>DateTime</type>
</CustomField>