unpackaged/main/default/objects/LyncUserStatusMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFUserName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusChangedAt__c</columns>
    <columns>StatusChangedOn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>